--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/postcss": "^4.0.14",
         "@tailwindcss/vite": "^4.0.0",
         "autoprefixer": "^10.4.2",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.31",
-        "tailwindcss": "^3.1.0",
+        "tailwindcss": "^4.0.14",
         "vite": "^6.0.11"
     },
     "dependencies": {
