--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
-        "alpinejs": "^3.14.9"
+        "alpinejs": "^3.14.9",
+        "apexcharts": "^4.5.0"
     }
 }
